<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.guardian.overlay.ui.home.HomeFragment"
        android:label="@string/tab_home" />

    <fragment
        android:id="@+id/qrScannerFragment"
        android:name="com.guardian.overlay.ui.qr.QrScannerFragment"
        android:label="@string/tab_qr" />

    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.guardian.overlay.ui.gallery.GalleryFragment"
        android:label="@string/tab_gallery" />

    <fragment
        android:id="@+id/trustedContactFragment"
        android:name="com.guardian.overlay.ui.trusted.TrustedContactFragment"
        android:label="@string/tab_trusted_contact" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.guardian.overlay.ui.settings.SettingsFragment"
        android:label="@string/tab_settings" />

</navigation>
